--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do List</title>
-    <link rel="stylesheet" href="styles.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Calendario semana 5</title>
 
-    <link rel="preconnect" href="http://fonts.googleapis.com">
+	<link rel="preconnect" href="http://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     
+
+	<link rel="stylesheet" href="style.css" />
 </head>
-
-
 <body>
+	<h1>CALENDARIO</h1>
 
-    <header class="Encabezado">
-        <h1 class="title">Ejercicio Programación web Semana 4</h1>
-    </header>
+	<div class="date-picker">
+		<div class="selected-date"></div>
 
-    <main>
-        <section>
-        <h2>Todas las tareas</h2>
-        <ul id="all"></ul>
-        </section>
+		<div class="dates">
+			<div class="month">
+				<div class="arrows prev-mth">&lt;</div>
+				<div class="mth"></div>
+				<div class="arrows next-mth">&gt;</div>
+			</div>
 
-    </main>
+			<div class="days"></div>
+		</div>
+	</div>
 
-    <script src="script.js"></script>
-
+	<script src="main.js"></script>
 </body>
-
 </html>
